--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,11 @@ dependencies:
   shared_preferences: ^2.2.3
   expandable: ^5.0.1
   http: ^1.2.1
+  pdf: ^3.11.1
+  printing: ^5.12.0
+  path_provider: ^2.0.11
+  permission_handler: ^11.3.1
+  open_file: ^3.3.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
